# infobot

./: .gitignore  LICENSE  README.md  debug_search.py  main.py  pyproject.toml  simple_monitor.py  test_improved_monitoring.py  test_message_send.py  test_monitoring.py
config/: config.example.yaml  config.yaml  prompts.yaml
infobot/ai/: __init__.py  siliconflow_client.py
infobot/core/: __init__.py  bot.py  message_handler.py  wechat_controller.py
infobot/utils/: __init__.py  config.py  logger.py
scripts/: install_macos.sh
wxauto_macos/: __init__.py  applescript_templates.py  wechat.py
wxauto_macos/utils/: __init__.py  config.py  logger.py
